# enalog-py

./: Makefile  README.md  pyproject.toml
.github/: not-grep.toml
.github/workflows/: ci.yaml
enalog/: __init__.py
enalog_py/: __init__.py
tests/: test_enalog.py
